# langgraph-photo-editor

./: .env.example  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  debug_analysis.py  debug_strategy.py  debug_workflow.py  deploy.sh  nginx.conf  packages.txt  photo-editor  photo_editor.py  plan.md  pyproject.toml  requirements.txt  requirements_streamlit.txt  streamlit_app.py  streamlit_local_storage.py  test_chat_gemini.py  test_enhanced.py  test_trim.py
.github/workflows/: build-and-release.yml  build-test.yml
.streamlit/: config.toml
docs/: ADVANCED.md  FAQ.md  MACOS_SETUP.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
electron/: .gitignore  README.md  build-setup.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
electron/assets/: README.md  build-info.json  entitlements.mac.plist  icon.icns
electron/bundled-python/: python-wrapper.sh  requirements.txt  test_bundle.py
electron/bundled-python/src/: __init__.py  agents_enhanced.py  cli_enhanced.py
electron/dist-electron/: builder-debug.yml  builder-effective-config.yaml  latest-linux.yml
electron/dist-electron/linux-unpacked/: chrome_crashpad_handler
electron/scripts/: bundle-python.js  prepare-assets.js
electron/src/main/: main.ts  preload.ts
electron/src/renderer/: App.tsx  (+3 more)
pages/: 1_🖼️_Single_Image.py  2_📦_Batch_Processing.py
src/: agents_enhanced.py  agents_old.py  cli.py  lens_corrections.py  lens_corrections_advanced.py  python_image_agent.py  wand_optimization_agent.py  workflow.py  workflow_enhanced.py
(+45 files in other folders)
