[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-photo-editor"
version = "0.1.0"
description = "AI-powered agentic photo editor using LangGraph and Claude vision"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.34.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
agentic-photo-editor = "src.cli:main"